--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="retry">再試行</string>
     <string name="settings">設定</string>
     <string name="logout">ログアウト</string>
+
+    <string name="notification_title_unread_issue">未読のIssue/Pull Requestがあります。</string>
 </resources>
